Updated editorconfig and ran first pass of new version

--- a/web-api/Source/.editorconfig
+++ b/web-api/Source/.editorconfig
@@ -17,71 +17,81 @@ tab_width=2
 [*]
 
 # Microsoft .NET properties
+csharp_new_line_before_members_in_object_initializers=false
 csharp_preferred_modifier_order=public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
 csharp_style_var_elsewhere=true:suggestion
 csharp_style_var_for_built_in_types=true:suggestion
 csharp_style_var_when_type_is_apparent=true:suggestion
-dotnet_style_predefined_type_for_locals_parameters_members=true:hint
-dotnet_style_predefined_type_for_member_access=true:hint
-dotnet_style_qualification_for_event=false:hint
-dotnet_style_qualification_for_field=false:hint
-dotnet_style_qualification_for_method=false:hint
-dotnet_style_qualification_for_property=false:hint
-dotnet_style_require_accessibility_modifiers=for_non_interface_members:hint
+dotnet_naming_rule.method_rule.severity=warning
+dotnet_naming_rule.method_rule.style=upper_camel_case_style
+dotnet_naming_rule.method_rule.symbols=method_symbols
+dotnet_naming_style.upper_camel_case_style.capitalization=pascal_case
+dotnet_naming_symbols.method_symbols.applicable_accessibilities=*
+dotnet_naming_symbols.method_symbols.applicable_kinds=method
+dotnet_style_parentheses_in_arithmetic_binary_operators=never_if_unnecessary:none
+dotnet_style_parentheses_in_other_binary_operators=never_if_unnecessary:none
+dotnet_style_parentheses_in_relational_binary_operators=never_if_unnecessary:none
+dotnet_style_predefined_type_for_locals_parameters_members=true:suggestion
+dotnet_style_predefined_type_for_member_access=true:suggestion
+dotnet_style_qualification_for_event=false:suggestion
+dotnet_style_qualification_for_field=false:suggestion
+dotnet_style_qualification_for_method=false:suggestion
+dotnet_style_qualification_for_property=false:suggestion
+dotnet_style_require_accessibility_modifiers=for_non_interface_members:suggestion
 
 # ReSharper properties
 resharper_align_linq_query=true
 resharper_align_multiline_argument=true
 resharper_align_multiline_calls_chain=true
 resharper_align_multiline_extends_list=true
+resharper_align_multiline_for_stmt=true
 resharper_align_multline_type_parameter_constrains=true
 resharper_align_multline_type_parameter_list=true
 resharper_align_tuple_components=true
-resharper_apply_on_completion=true
-resharper_blank_lines_after_control_transfer_statements=1
-resharper_blank_lines_around_single_line_local_method=1
-resharper_blank_lines_before_control_transfer_statements=1
-resharper_blank_lines_before_single_line_comment=1
+resharper_csharp_align_first_arg_by_paren=true
+resharper_csharp_align_multiline_argument=false
 resharper_csharp_align_multiline_parameter=true
 resharper_csharp_align_multiple_declaration=true
-resharper_csharp_blank_lines_around_single_line_invocable=1
 resharper_csharp_empty_block_style=together_same_line
 resharper_csharp_insert_final_newline=true
 resharper_csharp_keep_blank_lines_in_code=1
 resharper_csharp_keep_blank_lines_in_declarations=1
-resharper_csharp_new_line_before_while=true
+resharper_csharp_max_line_length=100
+resharper_csharp_naming_rule.method=AaBb, AaBb_AaBb
+resharper_csharp_outdent_commas=true
 resharper_csharp_stick_comment=false
-resharper_csharp_wrap_after_declaration_lpar=true
-resharper_csharp_wrap_after_invocation_lpar=true
-resharper_csharp_wrap_arguments_style=chop_if_long
-resharper_csharp_wrap_chained_method_calls=chop_if_long
-resharper_csharp_wrap_extends_list_style=chop_if_long
 resharper_csharp_wrap_parameters_style=chop_if_long
-resharper_keep_existing_embedded_arrangement=false
+resharper_keep_existing_declaration_parens_arrangement=false
+resharper_keep_existing_enum_arrangement=true
 resharper_keep_existing_expr_member_arrangement=false
-resharper_keep_existing_initializer_arrangement=false
-resharper_keep_existing_linebreaks=false
-resharper_max_attribute_length_for_same_line=80
-resharper_max_enum_members_on_line=5
+resharper_place_accessorholder_attribute_on_same_line=if_owner_is_single_line
+resharper_place_accessor_attribute_on_same_line=if_owner_is_single_line
 resharper_place_attribute_on_same_line=False
-resharper_place_expr_method_on_single_line=True
-resharper_place_expr_property_on_single_line=True
-resharper_place_simple_case_statement_on_same_line=True
-resharper_place_simple_enum_on_single_line=true
-resharper_prefer_explicit_discard_declaration=true
-resharper_prefer_separate_deconstructed_variables_declaration=true
-resharper_space_before_pointer_asterik_declaration=true
+resharper_place_field_attribute_on_same_line=true
 resharper_space_within_single_line_array_initializer_braces=true
-resharper_wrap_array_initializer_style=chop_if_long
-resharper_wrap_enum_declaration=chop_if_long
 
 # ReSharper inspection severities
-resharper_arrange_method_or_operator_body_highlighting=hint
-resharper_arrange_redundant_parentheses_highlighting=suggestion
-resharper_arrange_type_member_modifiers_highlighting=warning
+resharper_arrange_redundant_parentheses_highlighting=hint
+resharper_arrange_this_qualifier_highlighting=hint
+resharper_arrange_type_member_modifiers_highlighting=hint
+resharper_arrange_type_modifiers_highlighting=hint
+resharper_built_in_type_reference_style_for_member_access_highlighting=hint
+resharper_built_in_type_reference_style_highlighting=hint
 resharper_redundant_base_qualifier_highlighting=warning
-resharper_suggest_discard_declaration_var_style_highlighting=suggestion
+resharper_suggest_var_or_type_built_in_types_highlighting=hint
+resharper_suggest_var_or_type_elsewhere_highlighting=hint
+resharper_suggest_var_or_type_simple_types_highlighting=hint
 
 
 
 
+
+[*.{c,c++,cc,cp,cpp,cu,cuh,cxx,h,hh,hpp,hxx,inc,inl,ino,ipp,mpp,proto,tpp}]
+indent_style=tab
+indent_size=tab
+tab_width=4
+
+[*.{appxmanifest,axml,build,config,csproj,dbml,discomap,dtd,json,jsproj,lsproj,njsproj,nuspec,proj,props,resjson,resw,resx,StyleCop,targets,tasks,vbproj,xml,xsd}]
+indent_style=space
+indent_size=2
+tab_width=2
