--- a/daa-platform/DAA/Gateway/Dockerfile
+++ b/daa-platform/DAA/Gateway/Dockerfile
@@ -21,4 +21,4 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS runtime
 RUN apk add icu-libs
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 COPY --from=publish /app/out .
-ENTRYPOINT [ "dotnet", "Api.Web.dll" ]
+ENTRYPOINT [ "dotnet", "Gateway.dll" ]
