--- a/daa-platform/DAA/Users/appsettings.json
+++ b/daa-platform/DAA/Users/appsettings.json
@@ -1,12 +1,18 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   },
   "ApplicationOptions": {
-    "ApplicationName": "User API"
+    "ApplicationName": "Users API"
+  },
+  "LoggingOptions": {
+    "LogFileRootPath": "c:/logs",
+    "ApplicationName": "Users API"
   }
 }
