--- a/daa-platform/DAA/SVC.Gateway/Dockerfile
+++ b/daa-platform/DAA/SVC.Gateway/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS base
+﻿FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 WORKDIR /app
 
 COPY *.sln ./
@@ -7,11 +7,9 @@ COPY */*.csproj ./
 RUN for file in $(ls *.csproj); do mkdir -p ${file%.*}/ && mv $file ${file%.*}/; done
 RUN dotnet restore
 
-FROM base AS build
 COPY . .
 RUN dotnet build
 
-FROM build AS test
 RUN dotnet test
 
 FROM build AS publish
@@ -21,4 +19,4 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS runtime
 RUN apk add icu-libs
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 COPY --from=publish /app/out .
-ENTRYPOINT [ "dotnet", "Gateway.dll" ]
+ENTRYPOINT [ "dotnet", "SVC.Gateway.dll" ]
