--- a/daa-platform/DAA/SVC.Gateway/Dockerfile
+++ b/daa-platform/DAA/SVC.Gateway/Dockerfile
@@ -13,7 +13,7 @@ RUN dotnet build
 RUN dotnet test
 
 FROM build AS publish
-RUN dotnet publish -c Release -o out
+RUN dotnet publish SVC.Gateway/SVC.Gateway.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS runtime
 RUN apk add icu-libs
