Updated in daa platform

--- a/daa-platform/DAA/SVC.Users/appsettings.json
+++ b/daa-platform/DAA/SVC.Users/appsettings.json
@@ -14,5 +14,8 @@
   "LoggingOptions": {
     "LogFileRootPath": "c:/logs",
     "ApplicationName": "Users API"
+  },
+  "ConnectionStrings": {
+    "Users": "Server=(localdb)\\mssqllocaldb;Database=Daa_Users;Trusted_Connection=True;"
   }
 }
