--- a/daa-platform/DAA/SVC.Users/SVC.Users.csproj
+++ b/daa-platform/DAA/SVC.Users/SVC.Users.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\DAA.Platform\DAA.Platform.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    </ItemGroup>
+
 </Project>
