--- a/daa-platform/DAA/docker-compose.yml
+++ b/daa-platform/DAA/docker-compose.yml
@@ -11,10 +11,8 @@ services:
     ports:
       - "5000:80"
     depends_on:
-      # - database
       - users
     environment:
-      ConnectionStrings__DefaultConnection: "Server=database;Database=master;User=sa;Password=Your_password123;"
       ASPNETCORE_ENVIRONMENT: "Local"
   users:
     image: daa/users:test
@@ -25,13 +23,13 @@ services:
         APPNAME: Users
     ports:
       - "5001:80"
-    # depends_on:
-    #   - database
+    depends_on:
+      - database
     environment:
-      ConnectionStrings__DefaultConnection: "Server=database;Database=master;User=sa;Password=Your_password123;"
+      ConnectionStrings__Users: "Server=database;Database=Daa_Users;User=sa;Password=Your_password123;"
       ASPNETCORE_ENVIRONMENT: "Local"
-  # database:
-  #   image: "mcr.microsoft.com/mssql/server:2017-CU14-ubuntu"
-  #   environment:
-  #     SA_PASSWORD: "Your_password123"
-  #     ACCEPT_EULA: "Y"
+  database:
+    image: "mcr.microsoft.com/mssql/server:2017-CU14-ubuntu"
+    environment:
+      SA_PASSWORD: "Your_password123"
+      ACCEPT_EULA: "Y"
